--- a/composer.json
+++ b/composer.json
@@ -7,26 +7,35 @@
     ],
     "license": "MIT",
     "type": "project",
-    "require": {
-        "php": "^7.2.5",
+     "require": {
+        "php": "^8.1",
         "ext-exif": "*",
         "ext-gd": "*",
-        "barryvdh/laravel-debugbar": "^3.2",
-        "beyondcode/laravel-dump-server": "^1.0",
-        "facade/ignition": "^2.3.6",
-        "fakerphp/faker": "^1.13",
-        "fideloper/proxy": "^4.2",
-        "inertiajs/inertia-laravel": "^0.4.0",
-        "laravel/framework": "^8.0",
-        "laravel/tinker": "^2.0",
-        "laravel/ui": "^3.0",
-        "league/glide": "2.0.x-dev",
-        "mockery/mockery": "^1.3.1",
-        "nunomaduro/collision": "^5.0",
-        "phpunit/phpunit": "^9.0",
-        "reinink/remember-query-strings": "^0.1.0",
-        "sentry/sentry-laravel": "^1.5",
-        "tightenco/ziggy": "^0.8.0"
+        "beyondcode/laravel-dump-server": "^1.9",
+        "doctrine/dbal": "^3.7",
+        "fakerphp/faker": "^1.23",
+        "guzzlehttp/guzzle": "^7.2",
+        "inertiajs/inertia-laravel": "^0.6.3",
+        "laravel/framework": "^10.10",
+        "laravel/sanctum": "^3.2",
+        "laravel/tinker": "^2.8",
+        "laravel/ui": "^4.4",
+        "league/glide": "^2.3",
+        "nunomaduro/collision": "^7.10",
+        "reinink/remember-query-strings": "^0.1.2",
+        "sentry/sentry-laravel": "^4.1",
+        "tightenco/ziggy": "^1.0"
+    },
+    "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.9",
+        "fakerphp/faker": "^1.9.1",
+        "laravel/breeze": "^1.28",
+        "laravel/pint": "^1.0",
+        "laravel/sail": "^1.18",
+        "mockery/mockery": "*",
+        "nunomaduro/collision": "^7.0",
+        "phpunit/phpunit": "^9.6",
+        "spatie/laravel-ignition": "^2.0"
     },
     "autoload": {
         "classmap": [
